# Ros2_final

./: README.md
project/: package.xml  setup.py
project/project/: cnn.py
project_bringup/: CMakeLists.txt  package.xml
project_bringup/launch/: project.launch.py
project_cpp/: CMakeLists.txt  package.xml
project_cpp/src/: motion_plan.cpp
